修改启动日志

--- a/train-member/src/main/resources/application.properties
+++ b/train-member/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.application.name=train
-
+# ???
 server.port=8081
+
+# ???????????, ?????????, ??????, ????"/member"???????member??
+server.servlet.context-path=/member
