修改启动日志, 删除父工程src, 增加/member, 修改logback日志文件, application.properties修复中文乱码问题

--- a/train-member/src/main/resources/application.properties
+++ b/train-member/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# ???
+# 端口号
 server.port=8081
 
-# ???????????, ?????????, ??????, ????"/member"???????member??
+# 为所有路径添加一个前缀, 为了后续做路由转发 , 在网关模块里, 将接口带"/member"的请求都转发到member模块
 server.servlet.context-path=/member
