增加公共模块, 用于放置公共的类, 比如工具类,拦截器,AOP,常量, 枚举,公共配置等; 规范化项目目录,组织名.项目名.模块.包 版本管理,修改pom文件,将公共模块导入到member模块当中,同时通过父工程的pom进行版本统一管理

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 	</developers>
 	<modules>
 		<module>train-member</module>
+		<module>train-common</module>
 	</modules>
 	<scm>
 		<connection/>
@@ -57,6 +58,13 @@
 				<groupId>cn.hutool</groupId>
 				<artifactId>hutool-all</artifactId>
 				<version>5.8.16</version>
+			</dependency>
+
+			<!--将common模块当中的组织,项目,版本号导入-->
+			<dependency>
+				<groupId>com.xiaoweii</groupId>
+				<artifactId>train-common</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
