为网关模块配置路由转发, 要输出请求日志需要增加启动参数: -Dreactor.netty.http.server.accessLogEnabled=true 修改member端口号, 以及配置gateway网关, 增加HTTP CLient网关测试gateway转member

--- a/train-gateway/src/main/resources/application.properties
+++ b/train-gateway/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 # 网关单独配置端口号
 server.port=8000
 
+# 可以使用toyaml.com,在线转yml格式工具,将配置文件写成yml格式
+
+# 路由转发, 将/member/...的请求转发到member模块
+spring.cloud.gateway.routes[0].id=member
+# 后期用nacos,注册中心, 用应用名作路由转发
+spring.cloud.gateway.routes[0].uri=http://127.0.0.1:8001
+# spring.cloud.gateway.routes[0].uri=lb://member
+# 转发规则, 所有member前缀的都转发到member中
+spring.cloud.gateway.routes[0].predicates[0]=Path=/member/**
+
+# 上边的其实是内网, 将gateway请求转到member请求
+# 生产发布时, 只有gateway需要配置外网IP, 其它模块都只开放内网访问, 外网访问不了, 保证应用安全
