--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
 				<version>8.0.33</version>
 			</dependency>
 
+			<!--lombok-->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.26</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
