集成校验框架Validation 对输入参数进行合法性校验, Validation是Spring自带的校验框架, 比如说mobile不能为空, 如果为空需要返回消息手机号不能为空 这个时候可能会有异常, 如果不知道拦截什么异常, 可以先抛出异常看一下再拦截, 同时不知道异常信息可以打个断点看一下

--- a/train-common/pom.xml
+++ b/train-common/pom.xml
@@ -60,5 +60,11 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!--增加spring自带的校验框架Validation-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
