修改gateway, 解决跨域问题
因为跨域问题是服务器问题, 是服务器对自己的保护, 只允许自己的请求, 这种跨域问题是前后端分离不可避免的, 解决方法一般有两种
1. 给后端各个模块都配置一遍跨域请求
2. 统一配置
显而易见, 统一配置更加简便

--- a/train-gateway/src/main/resources/application.properties
+++ b/train-gateway/src/main/resources/application.properties
@@ -13,3 +13,14 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/member/**
 
 # 上边的其实是内网, 将gateway请求转到member请求
 # 生产发布时, 只有gateway需要配置外网IP, 其它模块都只开放内网访问, 外网访问不了, 保证应用安全
+
+# ??????(????allowedOrigin)
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOriginPatterns=*
+# ???????
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
+# ???????
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=*
+# ??????cookie
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+# ????????, ?????, ?????OPTION??
+spring.cloud.gateway.globalcors.cors-configurations.[/**].maxAge=3600
