--- a/train-gateway/src/main/resources/application.properties
+++ b/train-gateway/src/main/resources/application.properties
@@ -14,13 +14,13 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/member/**
 # 上边的其实是内网, 将gateway请求转到member请求
 # 生产发布时, 只有gateway需要配置外网IP, 其它模块都只开放内网访问, 外网访问不了, 保证应用安全
 
-# ??????(????allowedOrigin)
+# 允许请求来源(老版本叫allowedOrigin)
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOriginPatterns=*
-# ???????
+# 允许携带头信息
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
-# ???????
+# 允许的请求方式
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=*
-# ??????cookie
+# 是否允许携带cookie
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
-# ????????, ?????, ?????OPTION??
+# 跨域检测的有效期, 以秒为单位, 会发起一个OPTION请求
 spring.cloud.gateway.globalcors.cors-configurations.[/**].maxAge=3600
