--- a/train-common/pom.xml
+++ b/train-common/pom.xml
@@ -66,5 +66,10 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!--引入分页器依赖-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
