--- a/train-member/pom.xml
+++ b/train-member/pom.xml
@@ -47,6 +47,12 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>6.1.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
