导入模版引擎依赖freemarker, 接下来将会自制前后端代码生成器提高开发效率, 接下来的内容主要是生成器 主要实现: 乘车人增删改查为模版, 自制单表管理, 前后端生成器->service,controller,req,resp,enum,vue,持久层代码用官方的 收获: 学习代码生成器原理, 学习freemarker模版语言; 学会写自己的生成器, 可用于导出复制execl, 页面静态化;

--- a/train-generator/pom.xml
+++ b/train-generator/pom.xml
@@ -17,6 +17,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <!--模版引擎freemarker, 可以不加版本号,springboot默认会带一个版本号-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <!-- mybatis generator 自动生成代码插件 -->
