--- a/train-business/pom.xml
+++ b/train-business/pom.xml
@@ -9,13 +9,12 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>train-member</artifactId>
+    <artifactId>train-business</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.additionalArguments>-parameters</maven.compiler.additionalArguments>
     </properties>
 
     <dependencies>
@@ -38,7 +37,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 
