--- a/train-gateway/src/main/resources/application.properties
+++ b/train-gateway/src/main/resources/application.properties
@@ -11,6 +11,15 @@ spring.cloud.gateway.routes[0].uri=http://127.0.0.1:8001
 # 转发规则, 所有member前缀的都转发到member中
 spring.cloud.gateway.routes[0].predicates[0]=Path=/member/**
 
+
+# 路由转发, 将/member/...的请求转发到member模块
+spring.cloud.gateway.routes[1].id=business
+# 后期用nacos,注册中心, 用应用名作路由转发
+spring.cloud.gateway.routes[1].uri=http://127.0.0.1:8002
+# spring.cloud.gateway.routes[0].uri=lb://business
+# 转发规则, 所有member前缀的都转发到member中
+spring.cloud.gateway.routes[1].predicates[0]=Path=/business/**
+
 # 上边的其实是内网, 将gateway请求转到member请求
 # 生产发布时, 只有gateway需要配置外网IP, 其它模块都只开放内网访问, 外网访问不了, 保证应用安全
 
