--- a/train-generator/pom.xml
+++ b/train-generator/pom.xml
@@ -52,6 +52,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.xiaoweii</groupId>
+            <artifactId>train-business</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
