快速生成火车车站基础数据管理功能 中间除了个很严重的问题, 导入依赖但是无法识别包, 不知道具体是哪一步解决的, 有可能是先移除.iml然后mvn idea:module或者File->Invalidate Caches清除缓存;或者是编译顺序, 这个应该是先install父工程然后编译子模块, 而非简单的先去install business模块再去install generator模块就可以解决

--- a/train-business/pom.xml
+++ b/train-business/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>com.xiaoweii</groupId>
             <artifactId>train-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
