为火车车厢页面增加车次查询条件, 注意null和""的区别

--- a/train-business/src/main/resources/application.properties
+++ b/train-business/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 # 打印sql信息, 需要包mapper包日志级别改为trace
-logging.level.com.xiaoweii.train.member.mapper=trace
+logging.level.com.xiaoweii.train.business.mapper=trace
