--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<module>train-gateway</module>
 		<module>train-business</module>
         <module>train-generator</module>
+        <module>train-batch</module>
 
     </modules>
 	<scm>
