--- a/train-gateway/src/main/resources/application.properties
+++ b/train-gateway/src/main/resources/application.properties
@@ -20,6 +20,14 @@ spring.cloud.gateway.routes[1].uri=http://127.0.0.1:8002
 # 转发规则, 所有member前缀的都转发到member中
 spring.cloud.gateway.routes[1].predicates[0]=Path=/business/**
 
+# 路由转发, 将/member/...的请求转发到member模块
+spring.cloud.gateway.routes[2].id=batch
+# 后期用nacos,注册中心, 用应用名作路由转发
+spring.cloud.gateway.routes[2].uri=http://127.0.0.1:8003
+# spring.cloud.gateway.routes[0].uri=lb://batch
+# 转发规则, 所有member前缀的都转发到member中
+spring.cloud.gateway.routes[2].predicates[0]=Path=/batch/**
+
 # 上边的其实是内网, 将gateway请求转到member请求
 # 生产发布时, 只有gateway需要配置外网IP, 其它模块都只开放内网访问, 外网访问不了, 保证应用安全
 
