--- a/train-generator/pom.xml
+++ b/train-generator/pom.xml
@@ -70,7 +70,8 @@
                 <configuration>
                     <!--相当于生成器配套的文件,需要创建-->
                     <!--                    <configurationFile>src/main/resources/generator-config-member.xml</configurationFile>-->
-                    <configurationFile>src/main/resources/generator-config-business.xml</configurationFile>
+                    <!--                    <configurationFile>src/main/resources/generator-config-business.xml</configurationFile>-->
+                    <configurationFile>src/main/resources/generator-config-batch.xml</configurationFile>
                     <overwrite>true</overwrite>
                     <verbose>true</verbose>
                 </configuration>
