--- a/train-member/src/main/resources/application.properties
+++ b/train-member/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.servlet.context-path=/member
 # 数据库连接配置
 spring.datasource.url=jdbc:mysql://rm-bp1s948j00wp91609xo.rwlb.rds.aliyuncs.com/train_member?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=train_member
-spring.datasource.password=20020222Mjwborn
+spring.datasource.password=Member123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis xml路径
